Remove hardcoded quiz data
Removed hardcoded quiz data from quiz.html.

--- a/quiz.html
+++ b/quiz.html
@@ -27,213 +27,9 @@
     </div>
   </div>
 
+  <script src="assets/quiz-data.js"></script>
+
   <script>
-    // -----------------------------
-    // QUIZ DATA (Replace with your full 10-question sets)
-    // -----------------------------
-    const QUIZZES = {
-      foundations: [
-        {
-          q: "What is the main purpose of building a daily routine?",
-          options: [
-            "To control every second of your life",
-            "To create a stable base you can build on",
-            "To impress other people",
-            "To avoid responsibilities"
-          ],
-          correct: 1
-        },
-        {
-          q: "Which of the following is an example of a realistic goal?",
-          options: [
-            "Become a millionaire by next week",
-            "Learn everything in one day",
-            "Study 20 minutes each day",
-            "Never make mistakes again"
-          ],
-          correct: 2
-        },
-        {
-          q: "What is a good way to improve reading comprehension?",
-          options: [
-            "Skim everything quickly",
-            "Summarize what you read in your own words",
-            "Avoid reading difficult material",
-            "Only read headlines"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is the first step in rebuilding confidence?",
-          options: [
-            "Pretending everything is perfect",
-            "Recognizing small wins",
-            "Ignoring your feelings",
-            "Comparing yourself to others"
-          ],
-          correct: 1
-        },
-        {
-          q: "Which habit helps with time management?",
-          options: [
-            "Doing tasks randomly",
-            "Writing a simple daily plan",
-            "Waiting until you feel motivated",
-            "Trying to multitask everything"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is a healthy way to track progress?",
-          options: [
-            "Only noticing failures",
-            "Keeping a small journal",
-            "Expecting perfection",
-            "Never reviewing your goals"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is a sign of a good routine?",
-          options: [
-            "It is impossible to follow",
-            "It includes breaks and flexibility",
-            "It requires waking up at 4 AM",
-            "It changes every hour"
-          ],
-          correct: 1
-        },
-        {
-          q: "Why is writing helpful for personal growth?",
-          options: [
-            "It makes problems disappear instantly",
-            "It helps organize thoughts and emotions",
-            "It replaces talking to people",
-            "It guarantees success"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is a productive way to handle mistakes?",
-          options: [
-            "Give up immediately",
-            "Learn from them and adjust",
-            "Pretend they didn’t happen",
-            "Blame someone else"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is the purpose of setting small goals?",
-          options: [
-            "To avoid big goals forever",
-            "To build momentum and confidence",
-            "To waste time",
-            "To make things harder"
-          ],
-          correct: 1
-        }
-      ],
-
-      digital: [
-        {
-          q: "Which email address looks most professional?",
-          options: [
-            "xX420gOdXx@gmail.com",
-            "cutie_baby_99@yahoo.com",
-            "jordan.smith@gmail.com",
-            "bigbosskiller@random.com"
-          ],
-          correct: 2
-        },
-        {
-          q: "What is the purpose of the subject line in an email?",
-          options: [
-            "To write jokes",
-            "To summarize the email’s purpose",
-            "To confuse the reader",
-            "To leave blank"
-          ],
-          correct: 1
-        },
-        {
-          q: "Which file type is best for documents?",
-          options: ["MP3", "PDF", "JPG", "ZIP"],
-          correct: 1
-        },
-        {
-          q: "What is a strong password?",
-          options: [
-            "123456",
-            "password",
-            "Your name",
-            "A mix of letters, numbers, and symbols"
-          ],
-          correct: 3
-        },
-        {
-          q: "What should you do before clicking a link?",
-          options: [
-            "Click immediately",
-            "Check if the sender is trusted",
-            "Ignore the sender",
-            "Forward it to everyone"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is a spreadsheet used for?",
-          options: [
-            "Drawing pictures",
-            "Tracking information and numbers",
-            "Writing essays",
-            "Watching videos"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is phishing?",
-          options: [
-            "A type of music",
-            "A scam to steal information",
-            "A computer update",
-            "A safe email"
-          ],
-          correct: 1
-        },
-        {
-          q: "What is cloud storage?",
-          options: [
-            "A physical hard drive",
-            "A place to store files online",
-            "A type of weather",
-            "A video game"
-          ],
-          correct: 1
-        },
-        {
-          q: "What does CC mean in email?",
-          options: [
-            "Carbon Copy",
-            "Cancel Conversation",
-            "Create Chat",
-            "Copy Code"
-          ],
-          correct: 0
-        },
-        {
-          q: "What is the best way to learn digital tools?",
-          options: [
-            "Avoid using them",
-            "Try things and practice",
-            "Wait for someone else to do it",
-            "Only watch videos"
-          ],
-          correct: 1
-        }
-      ]
-    };
-
     // -----------------------------
     // QUIZ ENGINE
     // -----------------------------
